--- a/producers/.env
+++ b/producers/.env
@@ -1,3 +1,4 @@
 alpaca_endpoint = https://paper-api.alpaca.markets/v2
 alpaca_key = PKTLERXUHCZNXYCDCTXJ
 alpaca_secret = npImKaBQsjQUf9ClkbdhztwCRGLqS489KphsVL0i
+youtube_key = AIzaSyAE5FSBtyN5-rRVuWzfH5be6lS6ryuGAjU
